<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nfc_data_scheme">vnd.android.nfc</string>
    <string name="nfc_data_path">/digikaland</string>
    <string name="nfc_data_authority">ext</string>

    <string name="app_name">Digikaland</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="welcome">Üdvözöllek a Digikalandban!</string>
    <string name="racecode_description">Add meg a versenykódot, mellyel csatlakozhatsz a versenyhez!</string>
    <string name="racecode_hint">Kód</string>
    <string name="send">Beküldés</string>
    <string name="rolecode_description">Add meg a szerepkódod, mellyel a megfelelő csapathoz csatlakozhatsz!</string>
    <string name="actual">Aktuális</string>
    <string name="map">Térkép</string>
    <string name="status">Státusz</string>
    <string name="stations">Állomások</string>
    <string name="teams">Csapatok</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="refresh">Frissítés</string>
    <string name="title_activity_maps">Térkép</string>
    <string name="client_help_next_admin">Következő feladat felügyelői:</string>
    <string name="client_help_total_admin">A verseny felügyelői:</string>
    <string name="next_goal">Következő cél:</string>
    <string name="help">Segítség</string>
    <string name="station_in_progress">Állomás folyamatban:</string>
    <string name="open">Megnyitás</string>
    <string name="time_left">Hátralévő idő:</string>
    <string name="current_race">Jelenlegi versenyed:</string>
    <string name="team_name">Csapatod neve:</string>
    <string name="completed_stations">Teljesített állomások:</string>
    <string name="team_captain">A csapatkapitányod:</string>
    <string name="custom_answer_description">Erre a kérdésre saját választ kell adni.</string>
    <string name="answer_hint">Ide írd a választ.</string>
    <string name="physical_answer_hint">Ezt a feladatot nem a telefonodon kell megoldani.</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galéria</string>
    <string name="end_results">Végeredmény:</string>
    <string name="ending_place">Vége gyülekezőhely:</string>
    <string name="new_race">Új verseny</string>
    <string name="objective">Feladat</string>
    <string name="delete_picture_first">Előbb törölnöd kell egy már meglévő képet.</string>
    <string name="too_many_pictures">Túl sok képet jelöltél ki</string>
    <string name="delete_picture">Kép törlése</string>
    <string name="sure_to_delete">Biztosan törölni szeretnéd ezt a képet?</string>
    <string name="cancel">Mégse</string>
    <string name="delete">Törlés</string>
    <string name="starting_place">Kezdő gyülekezőhely</string>
    <string name="station_status">Állomás: %1$d/%2$d</string>
    <string name="station_id">Állomás sorszáma: %1$d</string>
    <string name="tri_status">%1$d/%2$d/%3$d</string>
    <string name="station_admin_list_item_summary">%1$d. állomás (%2$d/%3$d/%4$d)</string>
    <string name="station_admin_list_item">%1$d. állomás</string>
    <string name="point_status">%1$d/%2$d p</string>
    <string name="evaluate_station">Állomás: %1$d. állomás</string>
    <string name="evaluate_team">Csapat: %1$s</string>
    <string name="evaluate_penalty_value">Büntetés: %1$d%%</string>
    <string name="evaluate_date">Beadva: "%1$tY.%1$tm.%1$td. %1$tH:%1$tM"</string>
    <string name="date">%1$tY.%1$tm.%1$td. %1$tH:%1$tM</string>
    <string name="station_show_mock">%1$d. állomás (%2$d id)</string>
    <string name="station_show">%1$d. állomás (%2$s id)</string>
    <string name="position_number">%1$d.</string>
    <string name="point_number">%1$.2fp</string>
    <string name="evaluate">Értékelés</string>
    <string name="station">Állomás</string>
    <string name="total_admins">Teljes Adminok:</string>
    <string name="station_admins">Feladat adminok:</string>
    <string name="teams_and_captains">Csapatok és kapitányaik:</string>
    <string name="location">Helyszín:</string>
    <string name="station_responsible">Állomásért felelős:</string>
    <string name="eval_done_summ_team">Kiértékelt / végzett / összes csapat:</string>
    <string name="start">Indítás</string>
    <string name="eval_done_summ_stations">Kiértékelt/Végzett/Összes állomás:</string>
    <string name="end">Befejezés</string>
    <string name="my_station">Állomásom:</string>
    <string name="objectives">Feladatok</string>
    <string name="next_team">Következő csapat:</string>
    <string name="no_location_station">Nincs konkrét helyszíne ennek az állomásnak</string>
    <string name="solve_on_the_route">A feladatokat útközben oldjátok meg!</string>
    <string name="ok">OK</string>
    <string name="stadmin_cant_start_race">Te nem indíthatod el a versenyt!</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="sure_new_race">Biztos új versenyt szeretnél kezdeni?</string>
    <string name="pictures_cant_show">A képek így nem tudnak megjelenni.</string>
    <string name="station_start_success">Az állomás elindítása sikeres volt.</string>
    <string name="station_start_sure">Szeretnéd elindítani ezt az állomást ennek a csapatnak?</string>
    <string name="upload_success">Feltöltés sikeres!</string>
    <string name="denied_evaluate">Nem értékelheted ezt a megoldást!</string>
    <string name="no_station_admin">Nincs felelőse az állomásnak</string>
    <string name="nothing_to_evaluate">Nincs kiértékelésre váró csapat!</string>
    <string name="results_calculating">Eredmények összesítése…</string>
    <string name="sure_end_race">Biztos le akarod zárni a versenyt? Ezt a műveletet nem tudod visszavonni!</string>
    <string name="admins_go_here">Verseny közben itt jelennek majd meg a felügyelők</string>
    <string name="next_station">Következő állomás</string>
    <string name="nfc_cant_activate_with">Ezt a feladatot nem lehet NFC-vel aktiválni!</string>
    <string name="nfc_incorrect">Helytelen NFC tag!</string>
    <string name="loading_objectives">Feladatok betöltése…</string>
    <string name="nfc_retouch">Érintsd újra az NFC-t!</string>
    <string name="location_unable_detect">Nem állapítható meg a jelenlegi helyzeted.</string>
    <string name="denied_solution">Nem küldhetsz be megoldást!</string>
    <string name="solution_upload_success">Megoldás feltöltése sikeres!</string>
    <string name="incorrect_text_upload">A szöveg amit megadtál nem tölthető fel.</string>
</resources>
