<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.bme.aut.digikaland.ui.admin.station.activities.AdminStationMainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eval_done_summ_team"
            android:layout_marginTop="@dimen/s_margin"
            style="@style/StringFormatMiniTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="1/1/3"
            android:id="@+id/adminStationActualStatus"
            android:layout_marginTop="@dimen/xs_margin"
            style="@style/StringFormatSubTitle.Actual"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle.Center"
            android:id="@+id/adminStationActualEvaluate"
            android:layout_marginTop="@dimen/m_margin"
            android:text="@string/evaluate"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_station"
            android:layout_marginTop="@dimen/l_margin"
            android:gravity="center_horizontal"
            style="@style/StringFormatMiniTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Cím teljesen"
            android:layout_marginTop="@dimen/xs_margin"
            android:id="@+id/adminStationStationLocation"
            style="@style/StringFormatInformation.Center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Cím pontosítás"
            android:id="@+id/adminStationStationSubLocation"
            android:layout_marginTop="@dimen/xs_margin"
            android:gravity="center_horizontal"
            style="@style/StringFormatSubLocation"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle.Center"
            android:id="@+id/adminStationActualObjectives"
            android:layout_marginTop="@dimen/m_margin"
            android:text="@string/objectives"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle.Center"
            android:layout_marginTop="@dimen/l_margin"
            android:id="@+id/adminStationActualHelp"
            android:text="@string/help"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_team"
            android:layout_marginTop="@dimen/m_margin"
            android:gravity="center_horizontal"
            style="@style/StringFormatMiniTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/xs_margin"
            android:id="@+id/adminStationNextTeamContent">

        </LinearLayout>

    </LinearLayout>
</ScrollView>
