<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.bme.aut.digikaland.ui.admin.total.activities.AdminTotalMainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starting_place"
            android:layout_marginTop="@dimen/s_margin"
            style="@style/StringFormatMiniTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Cím teljesen"
            android:layout_marginTop="@dimen/s_margin"
            android:id="@+id/adminStarterLocation"
            style="@style/StringFormatInformation.Center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Cím pontosítás"
            android:id="@+id/adminStarterSubLocation"
            android:layout_marginTop="@dimen/xs_margin"
            android:gravity="center_horizontal"
            style="@style/StringFormatSubLocation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="2018.04.04. 04:04"
            android:id="@+id/adminStarterTime"
            android:layout_marginTop="@dimen/m_margin"
            style="@style/StringFormatMiniTitle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle.Center"
            android:id="@+id/adminStarterStart"
            android:layout_marginTop="@dimen/xxl_margin"
            android:text="@string/start"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle.Center"
            android:layout_marginTop="@dimen/l_margin"
            android:id="@+id/adminStarterHelp"
            android:text="@string/help"/>

        </LinearLayout>

</ScrollView>
