<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.bme.aut.digikaland.ui.client.fragments.ClientActualFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_goal"
            android:layout_marginTop="@dimen/s_margin"
            style="@style/StringFormatTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Állomás 1/5:"
            android:layout_marginTop="@dimen/xl_margin"
            android:id="@+id/clientStationText"
            style="@style/StringFormatSubTitle.Actual"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Cím teljesen"
            android:layout_marginTop="@dimen/m_margin"
            android:id="@+id/clientStationLocation"
            android:gravity="center_horizontal"
            style="@style/StringFormatLocation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Cím pontosítás"
            android:id="@+id/clientStationSubLocation"
            android:layout_marginTop="@dimen/xs_margin"
            android:gravity="center_horizontal"
            style="@style/StringFormatSubLocation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="2018.02.26. 18:29"
            android:layout_marginTop="@dimen/m_margin"
            android:id="@+id/clientStationTime"
            android:gravity="center_horizontal"
            style="@style/StringFormatLocation"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle.Center"
            android:id="@+id/clientActualMap"
            android:layout_marginTop="@dimen/h_margin"
            android:text="@string/map"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle.Center"
            android:layout_marginTop="@dimen/xl_margin"
            android:id="@+id/clientActualHelp"
            android:text="@string/help"/>

    </LinearLayout>
</ScrollView>
